# iqm-quantum-school

./: .envrc  .gitignore  README.md  day1.py  day2.py  day3-2.py  day3-3.py  day3.py  flake.nix  pyproject.toml
